2025-12-14: [RELEASE] v0.31.1 release - compatible with qtile 0.34.1
2025-11-22: [RELEASE] v0.34.0 release - compatible with qtile 0.34.0
2025-10-25: [BREAKING CHANGE] Updated border decorations to be compatible with new wayland backend.
                              You must be on latest qtile to use this.
2025-09-01: [BUGFIX] Fix `TooltipMixin` bug where text could not be set due to change in qtile
2025-08-31: [BUGFIX] Update `LiveFootballScores` for new(ish) API
2025-07-27: [BREAKING CHANGE] Drop support for python < 3.12 (following same change in qtile)
2025-07-25: [RELEASE] v0.33.0 release - compatible with qtile 0.33.0
2025-07-21: [BREAKING CHNAGE] More changes to `CurrentLayout` in qtile so you need latest
                              git version of qtile to be installed.
2025-07-12: [BREAKING CHANGE] Qtile has removed `CurrentLayoutIcon` as it is now part of
                              `CurrentLayout`. qtile-extras has been updated to match.
2025-06-15: [FEATURE] Add `Tetris` widget
2025-06-10: [RELEASE] v0.32.0 release - compatible with qtile 0.32.0
2025-06-08: [FEATURE] Add `Pong` widget
2025-06-01: [FEATURE] Add `Snake` widget
2025-03-22: [BUGFIX] Fix `IWD` widget crashing when `padding` is `None`
2025-03-21: [BUGFIX] Check for existing dbus service name for `SnapCast` widget
2025-03-20: [BUGFIX] Better handling of connection errors for `SnapCast` widget
2025-03-08: [FEATURE] Add ability to switch streams/groups in `SnapCast` widget
2025-03-07: [RELEASE] v0.31.0 release - compatible with qtile 0.31.0
2025-03-07: [FEATURE] Add Mpris2 support to `SnapCast` widget
2025-02-22: [FEATURE] Add ability to stroke `PowerLineDecoration` shape 
2025-01-07: [RELEASE] v0.30.0 release - compatible with qtile 0.30.0
2025-01-02: [FEATURE] More methods for generating `PopupMenu` objects
2024-12-26: [BUGFIX] Fix control highlight border in popup toolkit
2024-12-23: [FEATURE] Add ability to mask icons in `StatusNotifier` widget